--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -42,12 +42,10 @@
         android:id="@+id/tvNom"
         android:layout_width="66dp"
         android:layout_height="26dp"
+        android:layout_marginStart="36dp"
         android:layout_marginTop="108dp"
-        android:layout_marginEnd="48dp"
         android:text="Nom:"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/cvNom"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -77,8 +75,6 @@
         android:layout_marginTop="44dp"
         android:text="Prènom:"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/cvPrenom"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvNom" />
 
@@ -86,8 +82,8 @@
         android:id="@+id/tvCIN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="44dp"
         android:text="CIN:"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,11 +93,9 @@
         android:id="@+id/cvCin"
         android:layout_width="251dp"
         android:layout_height="51dp"
-        android:layout_marginStart="76dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="28dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/tvCIN"
         app:layout_constraintTop_toBottomOf="@+id/cvPrenom">
 
         <EditText
@@ -114,7 +108,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/tvEmail"
+        android:id="@+id/tvEmailInscription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -153,14 +147,16 @@
         android:text="Mot de passe:"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/tvEmailInscription" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="218dp"
         android:layout_height="45dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/tvMdp"
         app:layout_constraintTop_toBottomOf="@+id/cvEmail">
 
         <EditText
@@ -172,5 +168,17 @@
             android:inputType="textPassword"
             tools:ignore="TouchTargetSizeCheck" />
     </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/btnSubmitSignUp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Inscrire"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.434"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.745" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
