--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -152,16 +152,14 @@
     <androidx.cardview.widget.CardView
         android:layout_width="218dp"
         android:layout_height="45dp"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/tvMdp"
         app:layout_constraintTop_toBottomOf="@+id/cvEmail">
 
         <EditText
             android:id="@+id/etMdp"
-            android:layout_width="match_parent"
+            android:layout_width="182dp"
             android:layout_height="match_parent"
             android:ems="10"
             android:hint="Votre mot de passe"
@@ -176,9 +174,9 @@
         android:text="Inscrire"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.434"
+        app:layout_constraintHorizontal_bias="0.422"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.745" />
+        app:layout_constraintVertical_bias="0.647" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
