Compléter le front end du gestion de réservation

--- a/app/src/main/res/layout/activity_reservation_management.xml
+++ b/app/src/main/res/layout/activity_reservation_management.xml
@@ -82,8 +82,8 @@
             android:layout_width="163dp"
             android:layout_height="154dp"
             android:layout_margin="14dp"
+            android:foreground="@drawable/profile"
             app:cardCornerRadius="14dp"
-            android:foregroundGravity="center_horizontal"
             app:layout_column="0"
             app:layout_row="2" />
 
