Avancement dans les front ends(intents)

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -36,7 +36,7 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.361" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/tvNom"
@@ -133,6 +133,7 @@
             android:id="@+id/etEmail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:ems="10"
             android:hint="Votre Email"
             android:inputType="textEmailAddress" />
@@ -150,17 +151,18 @@
         app:layout_constraintTop_toBottomOf="@+id/tvEmailInscription" />
 
     <androidx.cardview.widget.CardView
-        android:layout_width="218dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="231dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="28dp"
         app:layout_constraintStart_toEndOf="@+id/tvMdp"
         app:layout_constraintTop_toBottomOf="@+id/cvEmail">
 
         <EditText
             android:id="@+id/etMdp"
-            android:layout_width="182dp"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:ems="10"
             android:hint="Votre mot de passe"
             android:inputType="textPassword"
