Avancement dans les interfaces front-end de l'application

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -7,8 +7,8 @@
     android:background="@color/backgroundColor2">
 
     <TableLayout
-        android:layout_width="409dp"
-        android:layout_height="844dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,39 +21,11 @@
             android:gravity="center">
 
             <TextView
-                android:id="@+id/tvTitleLogin"
+                android:id="@+id/tvTitleForgotPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Connectez-vous"
+                android:text="Changez votre mot de passe"
                 android:textSize="20sp" />
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center">
-
-
-            <TextView
-                android:id="@+id/tvEmailLogin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Email:"
-                android:textSize="20sp" />
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <EditText
-                    android:id="@+id/etEmailLogin"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:hint="Votre Email"
-                    android:inputType="textEmailAddress" />
-            </androidx.cardview.widget.CardView>
         </TableRow>
 
         <TableRow
@@ -62,22 +34,24 @@
             android:gravity="center">
 
             <TextView
-                android:id="@+id/tvPasswordLogin"
+                android:id="@+id/tvOldPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Mot de passe:"
+                android:layout_gravity="center"
+                android:text="Ancien mot de passe:"
                 android:textSize="20sp" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
 
                 <EditText
-                    android:id="@+id/etPasswordLogin"
+                    android:id="@+id/etOldPassword"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:hint="Votre mot de passe"
+                    android:hint="Ancien mot de passe"
                     android:inputType="textPassword" />
             </androidx.cardview.widget.CardView>
         </TableRow>
@@ -87,11 +61,26 @@
             android:layout_height="match_parent"
             android:gravity="center">
 
-            <Button
-                android:id="@+id/btnSubmitLogin"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/tvNewPassword"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Connecter" />
+                android:layout_gravity="center"
+                android:text="Nouveau mot de passe:"
+                android:textSize="20sp" />
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/etNewPassword"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Nouveau mot de passe"
+                    android:inputType="textPassword" />
+            </androidx.cardview.widget.CardView>
         </TableRow>
 
         <TableRow
@@ -103,7 +92,7 @@
                 android:id="@+id/btnSetPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Mot de passe oublié" />
+                android:text="Modifier" />
         </TableRow>
     </TableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
